# avionica-zerofs

./: Cargo.toml  README.md  build.rs
.cargo/: config
src/: channel.rs  config.rs  lib.rs  msg.rs  utils.rs  zerofs.rs
src/domain/: mod.rs
src/event/: input.rs  mod.rs
src/zmq/: ffi.rs  mod.rs
