[package]
name = "zerofs"
version = "0.1.0"
authors = ["Alvaro Polo <apoloval@gmail.com>"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.0"
log = "0.3"
log4rs = "0.3"
rustc-serialize = "0.3"
toml = "0.1"

[build-dependencies]
metadeps = "1"

[package.metadata.pkg-config]
libzmq = "3.2"
